--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,5 +17,7 @@ jobs:
       run: g++ --std=c++20 ./configure.cc -o configure
     - name: configure
       run:  ./configure
+    - name: install ninja
+      run: sudo apt-get install -y ninja-build
     - name: ninja
       run: ninja
