--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,6 +18,6 @@ jobs:
     - name: configure
       run:  ./configure
     - name: install ninja
-      run: sudo apt-get install -y ninja-build
+      run: sudo apt-get install -yq ninja-build
     - name: ninja
       run: ninja
